<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    tools:context=".Activities.SignUpActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email_white_24dp"
        android:ems="10"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person_outline_white_24dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_below="@+id/age"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="312dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock_outline_white_24dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/age"
        app:layout_constraintStart_toStartOf="@+id/age"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.083" />

    <EditText
        android:id="@+id/age"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_18_plus_sign_24dp"
        android:ems="10"
        android:hint="@string/enter_your_age"
        android:inputType=""
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/education"
        app:layout_constraintStart_toStartOf="@+id/education"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/education"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_action_education"
        android:ems="10"
        android:hint="@string/enter_your_education"
        android:inputType=""
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/occupation"
        app:layout_constraintEnd_toEndOf="@+id/occupation"
        app:layout_constraintStart_toStartOf="@+id/occupation"
        app:layout_constraintTop_toBottomOf="@+id/age"
        app:layout_constraintVertical_bias="0.283" />

    <EditText
        android:id="@+id/occupation"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_work_black_24dp"
        android:ems="10"
        android:hint="@string/enter_your_occupation"
        android:inputType=""
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/Summary"
        app:layout_constraintEnd_toEndOf="@+id/Summary"
        app:layout_constraintStart_toStartOf="@+id/Summary"
        app:layout_constraintTop_toBottomOf="@+id/education"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="334dp"
        android:layout_height="53dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/my_shape"
        android:onClick="register"
        android:text="@string/log_in"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/education"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/Summary"
        android:layout_width="356dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="344dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tell_us_about_yourself"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:layout_constraintVertical_bias="0.166" />


</android.support.constraint.ConstraintLayout>