...
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Activities.MainActivity">


    <Button
        android:id="@+id/signUp"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="204dp"
        android:onClick="click_sign_up"
...
